refactor to n-layers

--- a/src/Customertreatments1/Customertreatments1/Views/Home/Index.cshtml
+++ b/src/Customertreatments1/Customertreatments1/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Customertreatments1.Models.ApplicationUser
+﻿@model CustomerTreatments.Entities.ApplicationUser
 
 @{
     ViewData["Title"] = "Index";
