--- a/src/Customertreatments1/Customertreatments1/Views/Treatments/Delete.cshtml
+++ b/src/Customertreatments1/Customertreatments1/Views/Treatments/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Customertreatments1.Models.Treatment
+﻿@model CustomerTreatments.Entities.Treatment
 
 @{
     ViewData["Title"] = "Delete";
