--- a/src/Customertreatments1/Customertreatments1/Views/Treatments/Index.cshtml
+++ b/src/Customertreatments1/Customertreatments1/Views/Treatments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Customertreatments1.Models.Treatment>
+﻿@model IEnumerable<CustomerTreatments.Entities.Treatment>
 
 @{
     ViewData["Title"] = "Index";
