--- a/src/Customertreatments1/Customertreatments1/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/src/Customertreatments1/Customertreatments1/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Customertreatments1.Areas.Identity
+@using CustomerTreatments.WebAreas.Identity
 @using Microsoft.AspNetCore.Identity
-@namespace Customertreatments1.Areas.Identity.Pages
+@namespace CustomerTreatments.WebAreas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
