--- a/src/Customertreatments1/Customertreatments1/Views/_ViewImports.cshtml
+++ b/src/Customertreatments1/Customertreatments1/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Customertreatments1
-@using Customertreatments1.Models
+﻿@using CustomerTreatments
+@using CustomerTreatments.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
